Removes align-end to fix Firefox alignment

--- a/core/themes/claro/css/components/views-exposed-form.css
+++ b/core/themes/claro/css/components/views-exposed-form.css
@@ -27,7 +27,6 @@
 .views-exposed-form.views-exposed-form {
   display: flex;
   flex-wrap: wrap;
-  align-items: end;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
   padding: 0.5rem 1.5rem 1.5rem 1.5rem;
